# libakrypt_faq

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE  Readme.md  TODO  TODO.md  libakrypt-run.sh  libakrypt.conf  libakrypt.rc.in
akrypt/: Readme.md  akrypt.1  akrypt.c  akrypt.h  akrypt.md  akrypt.po  akrypt_hash.c  akrypt_icode.c  akrypt_mgm.c  akrypt_oid.c  akrypt_show.c  getopt.c
aktool/: Readme.md  aktool.1  aktool.1.in  aktool.c  aktool.h  aktool.md  aktool.po  aktool.template  aktool.template.in  aktool_asn1.c  aktool_encrypt.c  aktool_icode.c  aktool_key.c  aktool_show.c  aktool_test.c  crtest.sh  xgettext-run.sh
aktool/script/: blom.sh  crtest.sh  vertest.sh
asn1/: AbstractKey.c  AbstractKey.h  AlgorithmIdentifier.c  AlgorithmIdentifier.h  AsymmetricKeyResource.c  AsymmetricKeyResource.h  CipherKeyResource.c  CipherKeyResource.h  EncodedKeyValue.c  EncodedKeyValue.h  KeyContainer.asn1  KeyContainer.c  KeyContainer.h  KeyProtectParameters.c  KeyProtectParameters.h  KeyResource.c  KeyResource.h  KeyValue.c  KeyValue.h  Makefile.initial  OBJECT_IDENTIFIER.c  SecretKey.c  SecretKey.h  SecretKeyData.c  SecretKeyData.h  Validity.c  Validity.h  asn_system.h  pdu_collection.c
cmake/: DetectFlags.cmake  DetectHeaders.cmake  DetectIntrinsics.cmake  DetectLibraries.cmake  FindRelations.cmake  MakeDist.cmake  MakeDoc.cmake  MakeInstall.cmake
doc/: 00-introduction.md  01-install-guide.dox  01-install-guide.md  02-api.md  02-principles.dox  02-principles.md  02-use-instruction.md  02-user-guide.md  03-internal-interface.md  03-principles.md  05-content.dox  05-internal-asn1.md  06-asn1.md  07-aktool.md  Doxyfile.akbase.in  Doxyfile.akrypt.in  Doxyfile.in  Makefile.in  aktool-header.tex  aktool.rst  asn1.md  axel.sty  bibliography.rst  conf.py  faq.rst  faq_new.rst  far_new  index.rst  install-guide.rst  libakbase-header.tex.in  libakrypt-doc.tex.in  libakrypt-header.tex.in  libakrypt.dox  refman_footer.in  refman_header.in  technical-reference.rst
examples/: example-bckey-container.c  example-bckey-internal.c  example-bckey.c  example-buffer.c  example-context-manager-node.c  example-context-manager.c  example-dev-random.c  example-encrypt-ecb.c  example-encrypt-file.c  example-file.c  example-fiot.c  example-hash-file.c  example-hash-finalize.c  example-hash-oids.c  example-hash-parts.c  example-hash-update.c  example-hash.c  example-hello.c  example-hmac-key-file.c  example-hmac-key.c  example-hmac-oids.c  example-hmac.c  example-icode.c  example-ini.c  example-internal-compress01.c  example-internal-hash-file.c  example-internal-hash-update.c  example-internal-hash01.c  example-internal-mac-gost.c  example-internal-mgm-examples.c  example-internal-mgm-examples02.c  example-internal-random01.c  example-intro.c  example-key.c  example-log.c  example-mac-file.c  example-mac.c  example-mmap.c  example-mpzn-arithmetic.c  example-mpzn-convert-to-gmp.c  (+36 more)
examples/akbase/: example-ini-file.c  example-log.c  example-mmap.c
examples/faq/: example-0.c  example-1.c  example-10.c  example-11.c  example-12.c  example-13.c  example-14.c  example-15.c  example-16.c  example-17.c  example-18.c  example-19.c  example-2.c  example-20.c  example-21.c  example-22.c  example-23.c  example-24.c  example-25.c  example-26 hash file to do.c  example-26.c  example-27.c  example-28.c  example-29.c  example-3.c  example-30.c  example-31.c  example-32.c  example-33.c  example-4.c  example-5.c  example-6.c  example-7.c  example-8.c  example-9.c  example-g01n01.c  magma_bckey_acpkm_encrypt_decrypt_with_imit.c
examples/scripts/: asymenc.sh  crtest.sh
examples/tests/: test-aead.c  test-asn1-build.c  test-asn1-keys02.c  test-mpzn-arithmetic.c  test-random01.c  test-xtsmac01.c
libakrypt-0.6/: Changelog.md  TODO.md  libakrypt.rc.in
libakrypt-0.6/cmake/: DetectIntrinsics.cmake  DetectLibraries.cmake  MakeDist.cmake
libakrypt-0.6/doc/: Doxyfile.in  libakrypt.dox  refman_header.in
libakrypt-0.6/examples/: example-context-manager-node.c  example-context-manager.c  example-hash-oids.c  example-internal-compress02.c  example-internal-hash02.c  example-internal-mac-gost.c  example-mac-internal.c  example-mpzn-convert.c  example-oid.c  example-test.c
libakrypt-0.6/source/: ak_aead.c  ak_aead.h  ak_bckey.c  ak_buffer.c  ak_context_manager.c  ak_curves.c  ak_hash.c  ak_hmac.c  ak_mac.c  ak_mac.h  ak_mpzn.c  ak_mpzn.h  ak_oid.h  ak_random.h  ak_sign.c  ak_skey.h  ak_streebog.c  ak_tools.c
scripts/: asymenc.sh  blom.sh  icode.csh  icode.sh  vertest.sh
source/: ak_acpkm.c  ak_aead.c  ak_aead.h  ak_asn1.c  ak_asn1.h  ak_asn1_cert.c  ak_asn1_keys.c  ak_asn1_keys.h  ak_base64.c  ak_bckey.c  ak_bckey.h  ak_block_cipher_key.c  ak_blom.c  ak_buffer.c  ak_buffer.h  ak_cmac.c  ak_compress.c  ak_compress.h  ak_context_manager.c  ak_context_manager.h  ak_curves.c  ak_curves.h  ak_directory_key_manager.c  ak_eckey.c  ak_encrypt.c  ak_file.c  ak_fiot.c  ak_fiot.h  ak_fiot_kgp.c  ak_fiot_print.c  ak_fiot_protocol.c  ak_fiot_tlp.c  ak_gf2n.c  ak_gf2n.h  ak_gosthash.c  ak_gostmac.h  ak_handle.c  ak_hash.c  ak_hash.h  ak_hashrnd.c  (+75 more)
source/asn_processor/: ak_asn_codec_new.h  ak_asn_read_new.c  ak_asn_tools.c  (+2 more)
tests/: test-asn1-build.c  test-asn1-keys.c  test-asn1-parse.c  test-bckey01.c  test-bckey02.c  test-bckey03.c  test-bckey04.c  test-bckey05-cfb.c  test-bckey05-ofb.c  test-bckey05.c  test-context-manager.c  test-context-node.c  test-gf2n.c  test-hash01.c  test-hash01a.c  test-hash02.c  test-hash03.c  test-hash04.c  test-hmac01.c  test-hmac02.c  test-internal-asn-build-data.c  test-internal-asn-handler.c  test-internal-bckey01.c  test-internal-bckey01a.c  test-internal-bckey02-magma.c  test-internal-bckey02.c  test-internal-bckey03.c  test-internal-bckey04.c  test-internal-bckey05.c  test-internal-context-manager01.c  test-internal-context-node01.c  test-internal-fiot-algconst.c  test-internal-fiot-context.c  test-internal-fiot-echo-client.c  test-internal-fiot-echo-server.c  test-internal-fiot-unix.c  test-internal-gf2n.c  test-internal-hash01.c  test-internal-hash02.c  test-internal-hash03.c  (+41 more)
(+15 files in other folders)
